--- a/miniGithub/templates/miniGithub/home.html
+++ b/miniGithub/templates/miniGithub/home.html
@@ -2,11 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Home</title>
 </head>
 <body>
-    <h2>Home Page</h2>
-    <p>Welcome !!!</p>
+    {% extends "miniGithub/base.html" %}
+    {% block body_block %}
+        <h2>Home Page</h2>
+        <p>Welcome !!!</p>
+    {% endblock %}
 </body>
 </html>
 
