--- a/miniGithub/templates/miniGithub/signup.html
+++ b/miniGithub/templates/miniGithub/signup.html
@@ -2,26 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Sign up</title>
 </head>
 <body>
-    <h2>Sign up Form</h2>
-        <form method="post">
-          {% csrf_token %}
-          {% for field in form %}
-            <p>
-              {{ field.label_tag }}<br>
-              {{ field }}
-              {% if field.help_text %}
-                <small style="color: grey">{{ field.help_text }}</small>
-              {% endif %}
-              {% for error in field.errors %}
-                <p style="color: red">{{ error }}</p>
+    {% extends "miniGithub/base.html" %}
+    {% block body_block %}
+        <h2>Sign up Form</h2>
+            <form method="post">
+              {% csrf_token %}
+              {% for field in form %}
+                <p>
+                  {{ field.label_tag }}<br>
+                  {{ field }}
+                  {% if field.help_text %}
+                    <small style="color: grey">{{ field.help_text }}</small>
+                  {% endif %}
+                  {% for error in field.errors %}
+                    <p style="color: red">{{ error }}</p>
+                  {% endfor %}
+                </p>
               {% endfor %}
-            </p>
-          {% endfor %}
-          <button type="submit">Sign up</button>
-        </form>
+              <button type="submit">Sign up</button>
+            </form>
+    {% endblock %}
 </body>
 </html>
 
