--- a/miniGithub/templates/miniGithub/base.html
+++ b/miniGithub/templates/miniGithub/base.html
@@ -12,7 +12,9 @@
         <ul class="nav navbar-nav">
 {# Django Home Link / Admin Link / Register Link#}
           <li><a class="navbar-brand" href="{% url 'home' %}">DJANGO</a></li>
-          <li><a class="navbar-link" href="{% url 'signup' %}">Register</a></li>
+           {% if not user.is_authenticated %}
+             <li><a class="navbar-link" href="{% url 'signup' %}">Register</a></li>
+           {% endif %}
           {# Some logic on what to display for last item#}
           {% if user.is_authenticated %}
             <li><a href="{% url 'logout' %}">Logout</a></li>
