--- a/miniGithub/templates/miniGithub/base.html
+++ b/miniGithub/templates/miniGithub/base.html
@@ -12,6 +12,9 @@
         <ul class="nav navbar-nav">
 {# Django Home Link / Admin Link / Register Link#}
           <li><a class="navbar-brand" href="{% url 'projects' %}">DJANGO</a></li>
+            {% if user.is_authenticated %}
+             <li><a class="navbar-link" href="{% url 'project_add_edit' 0  %}">Add project</a></li>
+           {% endif %}
            {% if not user.is_authenticated %}
              <li><a class="navbar-link" href="{% url 'signup' %}">Register</a></li>
            {% endif %}
