--- a/miniGithub/templates/miniGithub/projects.html
+++ b/miniGithub/templates/miniGithub/projects.html
@@ -7,7 +7,12 @@
       <a href="/projects/{{ project.id }}/">
         {{ project.title }}
       </a>
+
+      <a href="/projects/add_edit/{{ project.id }}/">
+        Izmeni
+      </a>
     </p>
+
   {% endfor %}
 {% endblock %}
 
