--- a/miniGithub/templates/miniGithub/add_problem.html
+++ b/miniGithub/templates/miniGithub/add_problem.html
@@ -4,7 +4,7 @@
 
     {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 
-    <form action="{% url 'add_problem' project.id %}" method="post">
+    <form action="{% url 'add_problem' project.id 'problems' %}" method="post">
     {% csrf_token %}
 
       <div>
