--- a/miniGithub/templates/miniGithub/add_problem.html
+++ b/miniGithub/templates/miniGithub/add_problem.html
@@ -1,22 +1,22 @@
 {% extends "miniGithub/base.html" %}
 {% block body_block %}
-    <h1>Create new problem for project {{ project.title }}</h1>
+    <h3>Create new problem for project {{ project.title }}</h3>
 
     {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 
-    <form action="{% url 'add_problem' project.id 'problems' %}" method="post">
+    <form action="{% url 'add_problem' project.id %}" method="post">
     {% csrf_token %}
 
-      <div>
+      <div class="form-group">
         <label for="title">Title:</label>
-        <input type="text" name="title" placeholder="Problem title">
+        <input type="text" name="title" class="form-control" placeholder="Problem title">
       </div>
-      <div>
+      <div class="form-group">
         <label for="description">Description:</label>
-        <textarea name="description"></textarea>
+        <textarea class="form-control" name="description"></textarea>
       </div>
       <div>
-          <input type="submit" name="" value="Add problem">
+          <input class="btn btn-success" type="submit" name="" value="Add problem">
       </div>
     </form>
 
