--- a/miniGithub/templates/miniGithub/problem_details.html
+++ b/miniGithub/templates/miniGithub/problem_details.html
@@ -34,16 +34,19 @@
     {% endfor %}
   </div>
   <hr />
-  <div class="panel panel-default">
-    <div class="panel-body">
-      <div class="form-group">
-        <label for="description">Leave a comment:</label>
-        <textarea class="form-control" name="description"></textarea>
+  <form action="add_comment/" method="post">
+    {% csrf_token %}
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <div class="form-group">
+          <label for="comment">Leave a comment:</label>
+          <textarea class="form-control" name="comment"></textarea>
+        </div>
+      </div>
+      <div class="panel-footer">
+          <input class="btn btn-success" type="submit" name="" value="Comment">
       </div>
     </div>
-    <div class="panel-footer">
-        <input class="btn btn-success" type="submit" name="" value="Comment">
-    </div>
-  </div>
+  </form>
 {% endblock %}
 
