Vise podataka za probleme na listi problema

--- a/miniGithub/templates/miniGithub/problem_details.html
+++ b/miniGithub/templates/miniGithub/problem_details.html
@@ -9,8 +9,8 @@
     </i>
   </h3>
   <p class="text-muted">
-    <strong> {{ reported_by.creator }} </strong>
-    reported this problem {{ reported_by.created_time|naturaltime }}
+    <strong> {{ problem.reported_by }} </strong>
+    reported this problem {{ problem.created_time|naturaltime }}
   </p>
   <hr />
   <div>
