--- a/miniGithub/templates/miniGithub/problem_details.html
+++ b/miniGithub/templates/miniGithub/problem_details.html
@@ -17,13 +17,21 @@
 
     {% for comment in comments %}
       <div class="panel panel-default">
-        <div class="panel-heading">
+        <div class="panel-heading" style="position: relative;">
           <strong class="panel-title">
             {{ comment.creator }}
           </strong>
           <span class="text-muted">
             commented {{ comment.created_time|naturaltime }}
           </span>
+
+          <div style="position: absolute;right:10px;top:5px;">
+            <a href="comments/{{ comment.id }}/edit/">
+              <button type="button" class="btn btn-default btn-md">
+                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+              </button>
+            </a>
+          </div>
         </div>
         <div class="panel-body">
           <p>
