--- a/miniGithub/templates/miniGithub/problem_details.html
+++ b/miniGithub/templates/miniGithub/problem_details.html
@@ -24,6 +24,36 @@
           <span class="text-muted">
             commented {{ comment.created_time|naturaltime }}
           </span>
+            {% if comment.editCounts != 0 %}
+                <span class="text-muted" style="padding: 0px 5px;">•</span>
+                <div class="dropup" style="display: inline-block;">
+                  <button style="padding: 0px; border: none; background-color: inherit; color: #777;" class="btn btn-default dropdown-toggle" type="button" id="dropdown_{{comment.id}}" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    edited by {{ comment.edits.last.creator }}
+                    <span class="caret"></span>
+                  </button>
+                  <ul class="dropdown-menu" aria-labelledby="dropdown_{{comment.id}}" style="min-width: 250px;">
+                    <li style="padding: 5px 15px;">
+                      <span class="text-muted">
+                        Edited {{comment.editCounts}}
+                        {% if comment.editCounts == 1 %}
+                          time
+                          {% else %}
+                          times
+                          {% endif %}
+                      </span>
+                    </li>
+                    {% for edit in comment.editsSorted %}
+                      <li style="padding: 5px 10px;border-top: 1px solid rgba(0,0,0,0.1);">
+                        <b>{{edit.creator}} </b> edited {{ edit.created_time|naturaltime }}
+                      </li>
+                    {% endfor %}
+                    <li style="padding: 5px 10px;border-top: 1px solid rgba(0,0,0,0.1);">
+                      <b>{{comment.creator}} </b> created {{ comment.created_time|naturaltime }}
+                    </li>
+                  </ul>
+                </div>
+            {% endif %}
+          </span>
 
           <div style="position: absolute;right:10px;top:5px;">
             <a href="comments/{{ comment.id }}/edit/">
