--- a/miniGithub/templates/miniGithub/problem_details.html
+++ b/miniGithub/templates/miniGithub/problem_details.html
@@ -1,4 +1,4 @@
-{% extends "miniGithub/base.html" %}
+{% extends "miniGithub/base_with_jquery.html" %}
 {% load humanize %}
 {% block body_block %}
   <h3>
