--- a/miniGithub/templates/miniGithub/problem_details.html
+++ b/miniGithub/templates/miniGithub/problem_details.html
@@ -15,60 +15,80 @@
   <hr />
   <div>
 
-    {% for comment in comments %}
-      <div class="panel panel-default">
-        <div class="panel-heading" style="position: relative;">
-          <strong class="panel-title">
-            {{ comment.creator }}
-          </strong>
-          <span class="text-muted">
-            commented {{ comment.created_time|naturaltime }}
-          </span>
-            {% if comment.editCounts != 0 %}
-                <span class="text-muted" style="padding: 0px 5px;">•</span>
-                <div class="dropup" style="display: inline-block;">
-                  <button style="padding: 0px; border: none; background-color: inherit; color: #777;" class="btn btn-default dropdown-toggle" type="button" id="dropdown_{{comment.id}}" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    edited by {{ comment.edits.last.creator }}
-                    <span class="caret"></span>
-                  </button>
-                  <ul class="dropdown-menu" aria-labelledby="dropdown_{{comment.id}}" style="min-width: 250px;">
-                    <li style="padding: 5px 15px;">
-                      <span class="text-muted">
-                        Edited {{comment.editCounts}}
-                        {% if comment.editCounts == 1 %}
-                          time
-                          {% else %}
-                          times
-                          {% endif %}
-                      </span>
-                    </li>
-                    {% for edit in comment.editsSorted %}
-                      <li style="padding: 5px 10px;border-top: 1px solid rgba(0,0,0,0.1);">
-                        <b>{{edit.creator}} </b> edited {{ edit.created_time|naturaltime }}
+    {% for item in timeline %}
+      {% if item.description %}
+        <div class="panel panel-default">
+          <div class="panel-heading" style="position: relative;">
+            <strong class="panel-title">
+              {{ item.creator }}
+            </strong>
+            <span class="text-muted">
+              commented {{ item.created_time|naturaltime }}
+            </span>
+              {% if item.editCounts != 0 %}
+                  <span class="text-muted" style="padding: 0px 5px;">•</span>
+                  <div class="dropup" style="display: inline-block;">
+                    <button style="padding: 0px; border: none; background-color: inherit; color: #777;" class="btn btn-default dropdown-toggle" type="button" id="dropdown_{{comment.id}}" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      edited by {{ item.edits.last.creator }}
+                      <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdown_{{item.id}}" style="min-width: 250px;">
+                      <li style="padding: 5px 15px;">
+                        <span class="text-muted">
+                          Edited {{item.editCounts}}
+                          {% if item.editCounts == 1 %}
+                            time
+                            {% else %}
+                            times
+                            {% endif %}
+                        </span>
                       </li>
-                    {% endfor %}
-                    <li style="padding: 5px 10px;border-top: 1px solid rgba(0,0,0,0.1);">
-                      <b>{{comment.creator}} </b> created {{ comment.created_time|naturaltime }}
-                    </li>
-                  </ul>
-                </div>
-            {% endif %}
-          </span>
+                      {% for edit in item.editsSorted %}
+                        <li style="padding: 5px 10px;border-top: 1px solid rgba(0,0,0,0.1);">
+                          <b>{{edit.creator}} </b> edited {{ edit.created_time|naturaltime }}
+                        </li>
+                      {% endfor %}
+                      <li style="padding: 5px 10px;border-top: 1px solid rgba(0,0,0,0.1);">
+                        <b>{{item.creator}} </b> created {{ item.created_time|naturaltime }}
+                      </li>
+                    </ul>
+                  </div>
+              {% endif %}
+            </span>
 
-          <div style="position: absolute;right:10px;top:5px;">
-            <a href="comments/{{ comment.id }}/edit/">
-              <button type="button" class="btn btn-default btn-md">
-                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-              </button>
-            </a>
+            <div style="position: absolute;right:10px;top:5px;">
+              <a href="comments/{{ item.id }}/edit/">
+                <button type="button" class="btn btn-default btn-md">
+                  <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                </button>
+              </a>
+            </div>
+          </div>
+          <div class="panel-body">
+            <p>
+              {{ item.description }}
+            </p>
           </div>
         </div>
-        <div class="panel-body">
-          <p>
-            {{ comment.description }}
-          </p>
-        </div>
-      </div>
+        {% elif item.current_state %}
+          <div>
+              {% if item.current_state == '1' %}
+                <p>
+                  <span class="glyphicon glyphicon-exclamation-sign"></span>
+                  <strong>{{ item.creator }}</strong>
+                  <span> has opened this issue </span>
+                  {{ item.created_time|naturaltime }}
+                </p>
+              {% else %}
+                <p>
+                  <span class="glyphicon glyphicon-ban-circle"></span>
+                  <strong>{{ item.creator }}</strong>
+                  <span> has closed this issue </span>
+                  {{ item.created_time|naturaltime }}
+                </p>
+              {% endif %}
+          </div>
+        {% endif %}
     {% endfor %}
   </div>
   <hr />
@@ -86,6 +106,7 @@
              {% if problem.is_open %}
               <a href="close/">
                 <button class="btn btn-default" type="button">
+                  <span class="glyphicon glyphicon-ban-circle"></span>
                   Close issue
                 </button>
               </a>
