--- a/miniGithub/templates/miniGithub/problem_details.html
+++ b/miniGithub/templates/miniGithub/problem_details.html
@@ -13,7 +13,8 @@
     reported this problem {{ problem.created_time|naturaltime }}
   </p>
   <hr />
-  <div>
+  <div class="row">
+  <div class="col-md-9">
 
     {% for item in timeline %}
       {% if item.description %}
@@ -90,35 +91,52 @@
           </div>
         {% endif %}
     {% endfor %}
-  </div>
-  <hr />
-  <form action="add_comment/" method="post">
-    {% csrf_token %}
-    <div class="panel panel-default">
-      <div class="panel-body">
-        <div class="form-group">
-          <label for="comment">Leave a comment:</label>
-          <textarea class="form-control" name="comment"></textarea>
+    <hr />
+    <form action="add_comment/" method="post">
+      {% csrf_token %}
+      <div class="panel panel-default">
+        <div class="panel-body">
+          <div class="form-group">
+            <label for="comment">Leave a comment:</label>
+            <textarea class="form-control" name="comment"></textarea>
+          </div>
+        </div>
+        <div class="panel-footer">
+            <input class="btn btn-success" type="submit" name="" value="Comment">
+               {% if problem.is_open %}
+                <a href="close/">
+                  <button class="btn btn-default" type="button">
+                    <span class="glyphicon glyphicon-ban-circle"></span>
+                    Close issue
+                  </button>
+                </a>
+              {% else %}
+                <a href="reopen/">
+                  <button class="btn btn-default" type="button">
+                    Reopen issue
+                  </button>
+                </a>
+              {% endif %}
         </div>
       </div>
-      <div class="panel-footer">
-          <input class="btn btn-success" type="submit" name="" value="Comment">
-             {% if problem.is_open %}
-              <a href="close/">
-                <button class="btn btn-default" type="button">
-                  <span class="glyphicon glyphicon-ban-circle"></span>
-                  Close issue
-                </button>
-              </a>
-            {% else %}
-              <a href="reopen/">
-                <button class="btn btn-default" type="button">
-                  Reopen issue
-                </button>
-              </a>
-            {% endif %}
-      </div>
+    </form>
+  </div>
+  <div class="col-md-3">
+    <div>
+      <a href="set_milestone/">
+        <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
+        &nbsp;&nbsp;&nbsp;
+        <strong>Milestone</strong>
+      </a>
+      <p>
+        {% if problem.linked_milestone %}
+          {{ problem.linked_milestone.title }}
+        {% else %}
+          None
+        {% endif %}
+      </p>
     </div>
-  </form>
+  </div>
+  </div>
 {% endblock %}
 
