--- a/miniGithub/templates/miniGithub/edit_milestone.html
+++ b/miniGithub/templates/miniGithub/edit_milestone.html
@@ -20,7 +20,7 @@
         <textarea rows="10" class="form-control" name="description" >{{milestone.description}}</textarea>
       </div>
       <div>
-          <input class="btn btn-success" type="submit" name="" value="Add milestone">
+          <input class="btn btn-success" type="submit" name="" value="Edit milestone">
       </div>
     </form>
 
