--- a/miniGithub/templates/miniGithub/edit_milestone.html
+++ b/miniGithub/templates/miniGithub/edit_milestone.html
@@ -1,6 +1,6 @@
 {% extends "miniGithub/base.html" %}
 {% block body_block %}
-    <h3>Edit new milestone for project {{ project.title }}</h3>
+    <h3>Edit milestone for project {{ project.title }}</h3>
 
     {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
     <form action="" method="post">
