added milestone state, and added toggling between this two states ald filtering

--- a/miniGithub/templates/miniGithub/project_details.html
+++ b/miniGithub/templates/miniGithub/project_details.html
@@ -52,6 +52,18 @@
             <button type="button" class="btn btn-success">Report milestone</button>
           </a>
         </div>
+
+        <div class="col-md-2" style="padding: 0px; width: auto;">
+          <a href="1" >
+            <button type="button" class="btn btn-light">opened</button>
+          </a>
+        </div>
+        <div class="col-md-2" style="padding: 0px; width: auto;">
+        <a href="0">
+          <button type="button" class="btn btn-info">closed</button>
+        </a>
+        </div>
+
       </div>
       <br />
       <div class="list-group">
@@ -59,6 +71,11 @@
           <a class="list-group-item" href="{% url 'milestone_details' project.id milestone.id %}">
             <p>
               <strong>{{ milestone.title }}</strong>
+              {% if milestone.is_open  %}
+                OPENED
+              {% else %}
+                CLOSED
+              {% endif %}
             </p>
             <p class="text-muted">
               #{{milestone.id}} opened {{milestone.created_time|naturaltime}} due {{milestone.due_date|naturaltime}}
@@ -67,6 +84,13 @@
                {{milestone.description}}
              </p>
           </a>
+
+        {% if milestone.is_open  %}
+            <button type="submit" onclick="location.href='/projects/{{project.id}}/milestones/{{milestone.id}}/close/'">CLOSE</button>
+          {% else %}
+            <button type="submit" onclick="location.href='/projects/{{project.id}}/milestones/{{milestone.id}}/open/'">OPEN</button>
+          {% endif %}
+
         {% endfor %}
         </div>
       </div>
