--- a/miniGithub/templates/miniGithub/project_details.html
+++ b/miniGithub/templates/miniGithub/project_details.html
@@ -26,13 +26,31 @@
             <button type="button" class="btn btn-success">Report problem</button>
           </a>
         </div>
+
+        <div class="col-md-2" style="padding: 0px; width: auto;">
+          <a href="999999999" >
+            <button type="button" class="btn btn-light">opened</button>
+          </a>
+        </div>
+        <div class="col-md-2" style="padding: 0px; width: auto;">
+          <a href="0">
+            <button type="button" class="btn btn-info">closed</button>
+          </a>
+        </div>
+
       </div>
       <br />
+
       <div class="list-group">
         {% for problem in problems %}
           <a class="list-group-item" href="/projects/{{ project.id }}/problems/{{ problem.id }}">
             <p>
               <strong>{{ problem.title }}</strong>
+              {% if problem.is_open  %}
+                OPENED
+              {% else %}
+                CLOSED
+              {% endif %}
             </p>
             <p class="text-muted">
               #{{problem.id}} opened {{problem.created_time|naturaltime}} by {{problem.reported_by}}
